--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.3",
     "multer": "^1.4.3",
-    "nodemailer": "^6.7.0",
-    "socket.io": "^4.3.1"
+    "nodemailer": "^6.7.0"
   }
 }
