--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mongoose": "^6.0.3",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
+    "soap": "^0.42.0",
     "socket.io": "^4.3.1"
   }
 }
